<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wall-English</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_login">Login</string>
    <string name="menu_input">Input Content</string>
    <string name="menu_about">About</string>
    <string name="menu_google_translate">Google Translate</string>
    <string name="title_activity_learn_sentence">LearnSentenceActivity</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_material_editor">Material Editor</string>
    <string name="action_settings">Settings</string>
    <string name="input_content_label">Paste or input English content below, click \'OK\' to start memorizing</string>
   
    <string name="about_url">https://github.com/williamjoy/Wall-E</string>
    <string name="author">\u00A9 Lichun Wei</string>
    <string name="email">lichun.william@gmail.com</string>
</resources>