<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/ABOUT_NAME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/ABOUT_VERSION"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1.5" />

    <TextView
        android:id="@+id/ABOUT_COPYRIGHT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author" />

    <TextView
        android:id="@+id/ABOUT_EMAIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:text="@string/email" />

   <Space
       android:layout_width="wrap_content"
       android:layout_height="50sp" />

    <TextView
        android:id="@+id/ABOUT_URL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/about_url" />

</LinearLayout>