<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_login"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/menu_login" android:checkable="true"/>
    <item
        android:id="@+id/menu_input"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/menu_input"/>
    <item
        android:id="@+id/menu_switch_autocomplete"
        android:orderInCategory="120"
        android:showAsAction="always"
        android:title="@string/menu_switch_autocomplete"/>

</menu>